--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body,html {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 15px;
     width: 100%;
 }
@@ -29,5 +30,13 @@ li a {
     text-decoration: none;
     color: #000000;
     padding: 10px;
+    font-size: 18px;
    
+}
+
+.nav-logo a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: 900;
+    font-size: 24px;
 }
