--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@
 body,html {
     height: 100%;
     width: 100%;
+    background-color: #e1b353;
 }
 
 .main-container {
     width: 92%;
-    margin: 0 auto;
+    margin: 0 auto;  
 }
 nav {
     display: flex;
@@ -19,6 +20,9 @@ nav {
     align-items: center;
     padding: 15px;
     width: 100%;
+    background-color: #131313;
+    -webkit-box-shadow: 0px -4px 30px 3px rgba(0,0,0,0.7); 
+    box-shadow: 0px -4px 30px 3px rgba(0,0,0,0.7);
 }
 
 nav ul {
@@ -28,7 +32,7 @@ nav ul {
 
 li a {
     text-decoration: none;
-    color: #000000;
+    color: #ffffff  ;
     padding: 10px;
     font-size: 18px;
    
@@ -36,7 +40,39 @@ li a {
 
 .nav-logo a {
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     font-weight: 900;
     font-size: 24px;
+}
+
+.hero-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    gap: 15px;
+}
+
+.hero-content {
+    width: 500px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.hero-content h1 {
+    font-size: 48px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+.hero-img {
+    height: auto;
+    width: 30rem;
+}
+img {
+    height: 100%;
+    width: 100%;
 }
