--- a/style.css
+++ b/style.css
@@ -73,6 +73,12 @@ li a {
 .hero-content p {
     margin-bottom: 15px;
 }
+
+.hero-content button {
+    height: 40px;
+    width: 160px;
+    align-self: flex-start;
+}
 .hero-img {
     height: auto;
     width: 30rem;
@@ -80,6 +86,7 @@ li a {
 img {
     height: 100%;
     width: 100%;
+    
 }
 
 .info-section {
@@ -97,15 +104,22 @@ img {
 }
 .info-img {
     border: 5px solid #ffffff;
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 175px;
     border-radius: 10%;
     margin: 15px;
+    z-index: 999;
 }
 
 .info-para {
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 100px;
     border-radius: 10%;
     margin: 15px;
+    color: #ffffff;
+    text-align: center;
+}
+
+.quote-section {
+    height: 450px;
 }
