--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ li a {
     width: 30rem;
 }
 img {
-    height: 100%;
+    height: auto;
     width: 100%;
     
 }
@@ -111,11 +111,10 @@ img {
 }
 .info-img {
     border: 5px solid #ffffff;
-    width: 175px;
-    height: 175px;
+    width: 200px;
+    height: 200px;
     border-radius: 15%;
     margin: 15px;
-    z-index: 999;
     overflow: hidden;
 }
 
@@ -124,7 +123,7 @@ img {
     width: 175px;
     height: 100px;
     border-radius: 10%;
-    margin: 15px;
+    margin: 28px;
     color: #ffffff;
     text-align: center;
 }
@@ -136,12 +135,16 @@ img {
     flex-flow: column wrap;
     height: 450px;
 }
+
+.quote-main,.quote-footer {
+    width: 92%;
+}
 .quote-section p {
     font-size: 36px;
 }
 
 .quote-footer {
-    align-self: flex-end;
+    text-align: right;
 }
 
 .quote-footer span {
