--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ li a {
    
 }
 
+li a:hover, .nav-logo a:hover {
+    color: #e1b353;
+}
+
 .nav-logo a {
     text-decoration: none;
     color: #ffffff;
@@ -58,7 +62,7 @@ li a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 15px;
+    gap: 100px;
     width: 92%;
 }
 
@@ -85,6 +89,13 @@ li a {
     height: 40px;
     width: 160px;
     align-self: flex-start;
+    border-radius: 10px;
+    border: none;
+}
+
+.hero-content button:hover {
+    background-color: #e1b353;
+    border: 2px solid #ffffff;
 }
 .hero-img {
     height: auto;
@@ -151,6 +162,51 @@ img {
     font-size: 24px;
     font-weight: 900;
 }
+
+.action-section {
+    background-color: #e1b353;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    height: 300px;
+}
+
+.action-card {
+    background-color: #131313;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 150px;
+    width: 60%;
+    text-align: center;
+    border-radius: 10px;
+    color: #ffffff;
+    -webkit-box-shadow: 5px 8px 16px -3px #000000; 
+    box-shadow: 5px 8px 16px -3px #000000;
+}
+
+.action-card form {
+    margin: 30px;
+    width: 15%;
+}
+
+.action-card button {
+    padding: 10px;
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+}
+
+.action-card button:hover {
+    background-color: #e1b353;
+    border: 2px solid #ffffff;
+}
+
+.card-info {
+    margin: 30px;
+}
+
 
 footer {
     align-items: center;
